--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
     ext.kotlin_version = "1.5.0"
     repositories {
         google()
-        mavenCentral()
+        jcenter()
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
@@ -17,7 +18,6 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
